# oddish

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  DOCS.md  Dockerfile  README.md  SELF_HOSTING.md  docker-compose.yml  env.example  pyproject.toml
.github/workflows/: modal-deploy.yml  modal-preview.yml
alembic/: README.md  env.py
alembic/versions/: 585cf6a154a3_add_s3_storage_fields.py  704895440a03_simplify_trials_index.py  9c1d2e3f4a5b_add_experiments_table.py  c0a1b2c3d4e5_drop_experiment_name_uniqueness.py  c3d4e5f6a7b8_add_experiment_public_fields.py  h3i4j5k6l7m8_add_harbor_config_to_trials.py  j5k6l7m8n9o0_add_verdict_columns_to_tasks.py  l7m8n9o0p1q2_add_missing_trial_result_analysis_columns.py
assets/: heavy-run.yaml  job.yaml  light-run.yaml  skillsbench-pilot.yaml  sweep.yaml  validate.yaml
backend/: .env.example  Dockerfile  README.md  alembic.ini  cloud_policy.py  deploy.py  endpoints.py  modal_app.py  models.py  plan.md  pyproject.toml  serve.py  worker.py
backend/alembic/: env.py
backend/alembic/versions/: a1b2c3d4e5f6_add_cloud_auth_tables.py  c4d5e6f7a8b9_add_clerk_user_id.py  d1e2f3a4b5c6_add_clerk_org_id.py  e2f3a4b5c6d7_add_queue_stats_index.py  f2e3d4c5b6a7_add_deleted_at_columns.py  g3h4i5j6k7l8_add_github_username.py  h4i5j6k7l8m9_drop_unique_clerk_user_id.py  i5j6k7l8m9n0_add_provider_slots_table.py  j6k7l8m9n0p1_drop_experiment_name_uniqueness.py  k7l8m9n0p1q2_add_queue_slots_table.py
backend/api/: app.py  dashboard_experiments.py  schemas.py
backend/api/routers/: __init__.py  admin.py  api_keys.py  clerk_webhooks.py  dashboard.py  github_webhooks.py  orgs.py  public.py  tasks.py  trials.py
backend/auth/: __init__.py  provisioning.py  types.py  verification.py
backend/integrations/: __init__.py
backend/integrations/github/: __init__.py  client.py  formatter.py  notifier.py
backend/worker/: __init__.py  cleanup.py  functions.py  github.py  queue_manager.py  runtime.py  slots.py
examples/eslint__eslint-18066/: instruction.md  task.toml
examples/eslint__eslint-18066/environment/: Dockerfile  bug.patch
examples/eslint__eslint-18066/solution/: fix.patch
examples/eslint__eslint-18066/tests/: test.sh
examples/eslint__eslint-18073/: instruction.md
examples/eslint__eslint-18073/environment/: Dockerfile  bug.patch
examples/eslint__eslint-18073/solution/: fix.patch
examples/eslint__eslint-18073/tests/: test.sh
examples/eslint__eslint-18097/: instruction.md  task.toml
examples/eslint__eslint-18097/environment/: Dockerfile  bug.patch
examples/eslint__eslint-18097/solution/: fix.patch
examples/eslint__eslint-18097/tests/: test.sh
examples/eslint__eslint-18098/: instruction.md
examples/eslint__eslint-18098/environment/: Dockerfile  bug.patch
examples/eslint__eslint-18098/solution/: fix.patch
examples/eslint__eslint-18098/tests/: test.sh
examples/eslint__eslint-18313/: instruction.md  task.toml
examples/eslint__eslint-18313/environment/: Dockerfile  bug.patch
examples/eslint__eslint-18313/solution/: fix.patch
examples/eslint__eslint-18313/tests/: test.sh
examples/eslint__eslint-18328/: instruction.md  task.toml
examples/eslint__eslint-18328/environment/: Dockerfile  bug.patch
examples/eslint__eslint-18328/solution/: fix.patch
examples/eslint__eslint-18328/tests/: test.sh
frontend/: Dockerfile  README.md  env.example  eslint.config.mjs  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  run-prod-clerk-local.sh  tailwind.config.ts
frontend/src/: middleware.ts
frontend/src/app/: globals.css  head.tsx  layout.tsx  page.tsx  providers.tsx
frontend/src/components/: agent-legend.tsx  artifacts-viewer.tsx  code-block.tsx  dataset-detail-view.tsx  experiment-detail-view.tsx  experiment-share-button.tsx  experiment-trials-table.tsx  harbor-stage-badge.tsx  harbor-stage-timeline.tsx  nav.tsx  pass-at-k-graph.tsx  pass-at-one-leaderboard.tsx  queue-key-icon.tsx  status-badge.tsx  task-detail-panel.tsx  task-files-panel.tsx  theme-toggle.tsx  timing-breakdown-bar.tsx  trajectory-viewer.tsx  trial-detail-panel.tsx  trial-metrics-cards.tsx  unified-drawer-wrapper.tsx
frontend/src/lib/: api.ts  backend-config.ts  experiment-agent-grouping.ts  pass-at-k.ts  status-config.ts  types.ts  utils.ts
oddish/: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  SELF_HOSTING.md  alembic.ini  env.example  pyproject.toml
oddish/alembic/: README.md  env.py
oddish/alembic/versions/: 26682cabe1a2_add_idempotency_and_fk_cascade.py  3e83b4d6a123_increase_id_lengths.py  7270853bccfe_add_harbor_stage_to_trials.py  8b9c0d1e2f3a_add_tasks_org_created_at_index.py  9c1d2e3f4a5b_add_experiments_table.py  a1b2c3d4e5f6_add_run_analysis_to_tasks.py  b2c3d4e5f6a7_add_cloud_ready_columns.py  baseline_baseline.py  f1e2d3c4b5a6_add_deleted_at_columns.py  g2h3i4j5k6l7_add_name_columns.py  i4j5k6l7m8n9_add_token_timing_trajectory.py  k6l7m8n9o0p1_add_missing_updated_at_columns.py  n9o0p1q2r3s4_add_queue_key_to_trials.py  (+13 more)
oddish/scripts/: backfill_task_versions.py  deduplicate_task_names.py
oddish/tests/: test_queue_metadata.py  test_queue_reconciliation.py  test_task_storage.py  test_task_timeouts.py
scripts/: requeue_verdicts.py
src/oddish/: backfill_queue_keys.py  config.py  experiment.py  infra.py  queue.py  schemas.py
(+147 files in other folders)
