[build-system]
requires = ["hatchling>=1.26.3"]
build-backend = "hatchling.build"

[project]
name = "oddish"
version = "0.2.0"
description = "Eval scheduler for Harbor tasks - Postgres-backed job queue with PGQueuer"
readme = "README.md"
requires-python = ">=3.12,<3.14"
license = { file = "LICENSE" }

dependencies = [
    # Web framework
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "python-multipart>=0.0.9",
    "httpx>=0.27.0",
    "python-jose[cryptography]>=3.3.0",

    # Validation & settings
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",

    # Database
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",

    # Job queue
    "pgqueuer>=0.18.0",

    # CLI
    "typer>=0.12.0",
    "rich>=13.7.0",

    # S3-compatible storage
    "aioboto3>=13.0.0",

    # Harbor
    "harbor>=0.1.44",

    # Analysis and classification
    "swegen>=0.1.1",
    "claude-agent-sdk>=0.1.18",
    "pre-commit>=4.0.0",
]

[project.optional-dependencies]
# LLM providers for analysis/verdict
anthropic = [
    "anthropic>=0.40.0",
]
openai = [
    "openai>=1.50.0",
]
google = [
    "google-generativeai>=0.8.0",
]
# All LLM providers
llm = [
    "anthropic>=0.40.0",
    "openai>=1.50.0",
    "google-generativeai>=0.8.0",
]
# Modal/Cloud deployment dependencies
cloud = [
    "python-jose[cryptography]>=3.3.0",
    "httpx>=0.27.0",
    "python-multipart>=0.0.9",
]
# Development
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pre-commit>=4.0.0",
]
# Full installation (all features)
all = [
    "anthropic>=0.40.0",
    "openai>=1.50.0",
    "google-generativeai>=0.8.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pre-commit>=4.0.0",
]

[project.scripts]
oddish = "oddish.cli:app"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/oddish"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = false
namespace_packages = true
explicit_package_bases = true

# SQLAlchemy 2.0 type stub compatibility
[[tool.mypy.overrides]]
module = [
    "sqlalchemy.orm.*",
    "sqlalchemy.ext.asyncio.*",
    "pgqueuer.*",
]
ignore_missing_imports = true

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "sqlalchemy2-stubs>=0.0.2a38",
    "types-pyyaml>=6.0.12.20250915",
    "types-requests>=2.32.4.20260107",
]
