[build-system]
requires = ["hatchling>=1.26.3"]
build-backend = "hatchling.build"

[project]
name = "oddish"
version = "0.1.0"
description = "Postgres-backed eval scheduler for Harbor agent tasks — queuing, retries, and monitoring"
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [
    { name = "Rishi Desai", email = "rishi@abundant.ai" },
]
keywords = ["harbor", "eval", "llm", "agent", "benchmark", "scheduler"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Testing",
]

dependencies = [
    # Web framework
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "python-multipart>=0.0.9",
    "httpx>=0.27.0",
    "python-jose[cryptography]>=3.3.0",

    # Validation & settings
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",

    # Database
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",

    # Job queue
    "pgqueuer>=0.18.0",

    # CLI
    "typer>=0.12.0",
    "rich>=13.7.0",

    # S3-compatible storage
    "aioboto3>=13.0.0",

    # Harbor
    "harbor>=0.1.44",

    # Analysis and classification
    "swegen>=0.1.1",
    "claude-agent-sdk>=0.1.18",

    # LLM providers
    "anthropic>=0.40.0",
    "openai>=1.50.0",
    "google-generativeai>=0.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pre-commit>=4.0.0",
    "twine>=6.0.0",
]
all = [
    "oddish[dev]",
]

[project.urls]
Homepage = "https://github.com/abundant-ai/oddish"
Repository = "https://github.com/abundant-ai/oddish"
Issues = "https://github.com/abundant-ai/oddish/issues"
Documentation = "https://github.com/abundant-ai/oddish/blob/main/AGENTS.md"

[project.scripts]
oddish = "oddish.cli:app"

[tool.hatch.build.targets.sdist]
exclude = [".git", "uv.lock", ".pre-commit-config.yaml"]

[tool.hatch.build.targets.wheel]
packages = ["src/oddish"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = false
namespace_packages = true
explicit_package_bases = true

# SQLAlchemy 2.0 type stub compatibility
[[tool.mypy.overrides]]
module = [
    "sqlalchemy.orm.*",
    "sqlalchemy.ext.asyncio.*",
    "pgqueuer.*",
]
ignore_missing_imports = true

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "sqlalchemy2-stubs>=0.0.2a38",
    "types-pyyaml>=6.0.12.20250915",
    "types-requests>=2.32.4.20260107",
]
